examples/http-header-filter/echo-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headers
spec:
  parentRefs:
  - name: gateway
    sectionName: http
  hostnames:
  - "echo.example.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /headers
    filters:
    - type: RequestHeaderModifier
      requestHeaderModifier:
        set:
        - name: No1WebServer
          value: NGINX
        add:
        - name: Accept-Encoding
          value: compress
        - name: What-is-NFG
          value: NGINX-Gateway-Fabric
        remove:
        - User-Agent
    backendRefs:
    - name: headers
      port: 80
